[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquipydia"
version = "0.1.0"
description = "Python client library for the Liquipedia API (LPDB v3)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dylan Monfret", email = "dyl_m.dev@proton.me" },
]
keywords = ["liquipedia", "esports", "api", "api-client", "lpdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2.13,<3",
]

[project.urls]
Homepage = "https://github.com/Dyl-M/liquipydia"
Documentation = "https://dyl-m.github.io/liquipydia/"
Repository = "https://github.com/Dyl-M/liquipydia"
Issues = "https://github.com/Dyl-M/liquipydia/issues"
Changelog = "https://github.com/Dyl-M/liquipydia/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff==0.15.12",
    "mypy==1.20.2",
]
test = [
    "pytest==9.0.3",
    "respx==0.23.1",
    "coverage==7.13.5",
]
docs = [
    "furo==2025.12.19",
    "myst-parser==5.0.0",
    "sphinx==9.1.0",
    "sphinx-autobuild==2025.8.25",
    "sphinx-autodoc-typehints==3.10.2",
    "sphinx-copybutton==0.5.2"
]

# --- Ruff ---

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "D", # pydocstyle
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "S", # flake8-bandit (security)
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "TCH", # flake8-type-checking
]
ignore = [
    "D104", # missing docstring in public package
    "RUF022", # __all__ sorting (we use comment-grouped entries)
]

[tool.ruff.lint.per-file-ignores]
"_tests/**" = ["ANN", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["liquipydia"]
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# --- Mypy ---

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["_tests"]
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
markers = ["integration: opt-in tests that hit the live Liquipedia API (requires LPDB_API_KEY)"]

# --- Coverage ---

[tool.coverage.run]
source = ["liquipydia"]
omit = ["_tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

# --- Semantic Release ---

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "liquipydia/__init__.py:__version__",
    "liquipydia/_client.py:_VERSION",
]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "build"]
